rounding up tests & polishing